feat: add financial timeline
