# core/planifai-core/src/main/java/com/planifai/core/finance/domain/model/cashflow/Cashflow.java
@@ -1,0 +1,14 @@
+package com.planifai.core.finance.domain.model.cashflow;
+
+import lombok.Builder;
+
+import java.time.YearMonth;
+import java.util.List;
+
+@Builder
+public record Cashflow(
+        YearMonth from,
+        YearMonth to,
+        List<CashflowMonth> months
+) {
+}
